--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -14,9 +14,28 @@
 .Todo__items-list li {
 }
 
+.Todo__buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
 .Todo__new-item {
+  font-size: 16px;
+}
+
+.Todo__new-item__name {
+  font-size: 16px;
+  background-color: white;
+  padding: 10px;
+  color: #333;
+}
+
+
+button {
   background-color: white;
   padding: 10px 20px;
   color: #333;
+  font-size: 16px;
   cursor: pointer;
 }
