--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -6,21 +6,16 @@
 }
 
 .Todo__items-list {
-  padding: 5px;
+  margin-top: 10px;
   width: 100%;
   list-style-type: none;
-}
-
-.Todo__items-list li {
-}
-
-.Todo__buttons {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
+  padding: 0;
 }
 
 .Todo__new-item {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
   font-size: 16px;
 }
 
@@ -29,6 +24,9 @@
   background-color: white;
   padding: 10px;
   color: #333;
+  flex-grow: 1;
+  border: none;
+  outline: none;
 }
 
 
@@ -38,4 +36,6 @@ button {
   color: #333;
   font-size: 16px;
   cursor: pointer;
+  border: none;
+  outline: none;
 }
