--- a/src/Todo/Item/Item.css
+++ b/src/Todo/Item/Item.css
@@ -2,7 +2,7 @@
   font-size: 16px;
   text-align: left;
   padding: 10px;
-  background-color: #61dafb;
+  background-color: #92FEF9;
   color: #333;
   cursor: pointer;
   margin-bottom: 10px;
